LUA/ollama-k3s/nginx-auth/ollama-ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - LAPTOP-E7T7EI54
    secretName: ollama-tls-cert-host
  rules:
  - host: LAPTOP-E7T7EI54
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-auth
            port:
              number: 443
